metrics-cache/src/section/snapshots/metrics_cache__section__resource__tests__kube_allocatable_cpu_resource_v1.snap
---
source: metrics-cache/src/section/resource.rs
expression: "KubeAllocatableCpuResourceV1::from_node(&node_with_allocatable(\"cpu\", \"2\"))"
---
{
  "context": "node",
  "value": 2.0
}
