metrics-cache/src/section/snapshots/metrics_cache__section__resource__tests__kube_allocatable_memory_resource_v1.snap
---
source: metrics-cache/src/section/resource.rs
expression: "KubeAllocatableMemoryResourceV1::from_node(&node_with_allocatable(\"memory\",\n\"1Gi\"))"
---
{
  "context": "node",
  "value": 1073741824.0
}
