metrics-cache/src/section/snapshots/metrics_cache__section__resource__tests__kube_allocatable_memory_resource_v1_sums_across_nodes.snap
---
source: metrics-cache/src/section/resource.rs
expression: "KubeAllocatableMemoryResourceV1::from_nodes(&nodes)"
---
{
  "context": "cluster",
  "value": 1073741826.0
}
